--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AppBanHang</string>
+    <string name="gi_25000">Giá: 25000 đ</string>
+    <string name="th_m_v_o_gi_h_ng">thêm vào giỏ hàng</string>
 </resources>
